Bug 490980 - No way to cancel a Rectangular Region screenshot without a keyboard
Summary: No way to cancel a Rectangular Region screenshot without a keyboard
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 24.05.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Noah Davis
URL:
Keywords: junior-jobs, usability
Depends on:
Blocks:
 
Reported: 2024-07-29 15:06 UTC by Plata
Modified: 2025-12-06 15:10 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Plata 2024-07-29 15:06:37 UTC
SUMMARY
It's not quite clear how to use Spectacle with a touchscreen.

STEPS TO REPRODUCE
For example:
- Try to abort a rectangular selection (screenshot/recording).
- Try to take a rectangular selection screenshot/start recording a rectangular selection.

OBSERVED RESULT
It's not clear how to achieve this on touchscreen.

EXPECTED RESULT
There are dedicated buttons/explanatory texts.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 6.1.3
KDE Frameworks Version: 6.4.0
Qt Version: 6.7.2

ADDITIONAL INFORMATION
Somewhat related to https://bugs.kde.org/show_bug.cgi?id=486536.
Comment 1 Nate Graham 2025-10-30 20:34:26 UTC
For #2, you just touch and drag, no?

For #1, it isn't possible indeed. Let's use the bug report to track this.
Comment 2 row.e1 2025-11-11 14:28:49 UTC
Is adding a Cancel button (i.e., a red X icon) a plausible solution?
Comment 3 Nate Graham 2025-11-14 14:56:17 UTC
Yes, though I'd recommend using the standard Cancel icon ("dialog-cancel-symbolic"), not a red X.
Comment 4 Bug Janitor Service 2025-11-29 08:50:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/spectacle/-/merge_requests/493
Comment 5 Taras Oleksyn 2025-11-30 01:51:27 UTC
Git commit 49c615c1989d9fcfce7ed1be805538a9dca6a8a8 by Taras Oleksyn.
Committed on 29/11/2025 at 08:17.
Pushed by ndavis into branch 'master'.

Add cancel button to capture window to improve touchscreen usability

M  +1    -0    src/CMakeLists.txt
A  +11   -0    src/Gui/CancelAction.qml     [License: LGPL(v2.0+)]
M  +14   -0    src/Gui/CaptureOverlay.qml
M  +5    -0    src/Gui/CaptureWindow.cpp
M  +1    -0    src/Gui/CaptureWindow.h
M  +1    -1    src/PlasmaVersion.h

https://invent.kde.org/plasma/spectacle/-/commit/49c615c1989d9fcfce7ed1be805538a9dca6a8a8