Add cancel button to capture window to improve touchscreen usability

BUG: 490980